Fix team members on mobile

--- a/wp-content/themes/doyle/assets/css/editor-style.css
+++ b/wp-content/themes/doyle/assets/css/editor-style.css
@@ -1565,12 +1565,12 @@ p + p .btn {
   position: relative;
   display: flex;
   flex-direction: column;
-  width: calc(50% - 2rem);
+  width: calc(50% - 0.75rem);
   text-decoration: none;
   margin: 0 0.75rem 1rem 0.75rem;
   order: 2;
 }
-@media (min-width: 50em) {
+@media (min-width: 70em) {
   .team-members__item {
     width: calc(25% - 1.5rem);
     margin: 0 1rem 1.5rem 1rem;
@@ -1579,6 +1579,16 @@ p + p .btn {
 @media (min-width: 50em) {
   .team-members__item:nth-child(4n+1), .team-members__item:first-of-type {
     margin-left: 0;
+  }
+}
+@media (max-width: 69.99em) {
+  .team-members__item:nth-child(2n+1) {
+    margin-left: 0;
+  }
+}
+@media (max-width: 69.99em) {
+  .team-members__item:nth-child(2n+2) {
+    margin-right: 0;
   }
 }
 @media (min-width: 50em) {
@@ -1600,6 +1610,7 @@ p + p .btn {
   order: 1;
   width: 100%;
   border-bottom: 2px solid var(--color-grey-dark);
+  margin: 0 0 2rem 0;
 }
 @media (min-width: 50em) {
   .team-members__item-featured {
