--- a/wp-content/themes/doyle/blocks/doyle/team-members/team-members.scss
+++ b/wp-content/themes/doyle/blocks/doyle/team-members/team-members.scss
@@ -13,11 +13,15 @@
 		position: relative;
 		display: flex;
 		flex-direction: column;
-		width: calc(100% /  2 - 2rem);
+		width: calc(100% /  2 - 0.75rem);
 		text-decoration: none;
 		margin: 0 0.75rem 1rem 0.75rem;
 		order: 2;
-		@include mq(medium) {
+		// @include mq(medium) {
+		// 	width: calc(100% /  4 - 1.5rem);
+		// 	margin: 0 1rem 1.5rem 1rem;
+		// }
+		@include mq(large) {
 			width: calc(100% /  4 - 1.5rem);
 			margin: 0 1rem 1.5rem 1rem;
 		}
@@ -25,6 +29,16 @@
 		&:first-of-type {
 			@include mq(medium) {
 				margin-left: 0;
+			}
+		}
+		&:nth-child(2n+1) {
+			@include mq($until: large) {
+				margin-left: 0;
+			}
+		}
+		&:nth-child(2n+2) {
+			@include mq($until: large) {
+				margin-right: 0;
 			}
 		}
 		&:last-of-type,
@@ -47,6 +61,7 @@
 			order: 1;
 			width: 100%;
 			border-bottom: 2px solid var(--color-grey-dark);
+			margin: 0 0 2rem 0;
 			@include mq(medium) {
 				width: calc(100% /  2 - var(--spacing-s));
 				margin: 0 var(--spacing-s) var(--spacing-s) var(--spacing-s);
